# trino-python-oauth2

./: .env.local  .gitignore  Makefile  README.md  example.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/trino/oauth2/: __init__.py  configs.py  models.py  oauth_client.py
src/trino/oauth2/oauth_flows/: __init__.py  _refresh_token.py  oauth_authorization_mode.py  oauth_client_credentials.py  oauth_device_code.py
src/trino/oauth2/utils/: _oauth_store.py  _url_helpers.py  proxies.py
tests/: Dockerfile  configure_hydra.py  docker-compose.yml  hydra.yml  hydra_helper.py  test_cryptfile_logic.py  test_device_code.py  test_e2e_hydra_bad_authcode_tests.py  test_e2e_hydra_bad_tests.py  test_e2e_hydra_good_authcode_tests.py  test_e2e_hydra_good_tests.py  test_helpers.py  test_oauth_client.py
