[build-system]
requires = [
    "setuptools >= 61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "trino.oauth2"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "pyJWT",
    "requests",
    "keyring",
    "requests_oauthlib",
    "cryptography",
    "keyrings.cryptfile"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed", "README.md"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = [
    "tests",
]

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    # Documentation
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "broad-exception-caught",
    "too-many-arguments",
    "logging-fstring-interpolation",
    "redefined-outer-name",
    "duplicate-code",
]

[tool.pylint.design]
max-positional-arguments = 7

[tool.pylint.format]
max-line-length = 120

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{310,311,312}
isolated_build = True

[testenv]
deps =
    -rrequirements-dev.txt
commands =
    python -m pytest {posargs}
"""

[tool.mypy]
explicit_package_bases = true
strict = true
packages = "trino.oauth2"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
